<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank You!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Soham">%s</xliff:g></string>
    <string name="enter_name">Enter your name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value" translatable="false">2</string>
    <string name="order">Order</string>
    <string name="order_summary_wc">Has Whipped Cream: <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Has Chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="order_summary_emailsubject">JustJava for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="increment_error">You cannot have more than 100 coffees</string>
    <string name="decrement_error">You cannot have less than 1 coffee</string>

</resources>